# xlib

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  byteswap.cpp  execution_just.cpp  execution_on.cpp  execution_transform.cpp  executor_example.cpp  latch_example.cpp  schedule_example.cpp  static_thread_pool.cpp  transform_endian.cpp  type_list.cpp  type_set.cpp
include/xlib/: CMakeLists.txt  __config.hpp  bit.hpp  buffer.hpp  chrono.hpp  conqueue.hpp  execution.hpp  filesystem.hpp  format.hpp  functional.hpp  future.hpp  latch.hpp  mmap.hpp  result_state.hpp  scope.hpp  shared_mutex.hpp  thread.hpp  thread_pool.hpp  time.hpp  type_traits.hpp
include/xlib/chrono/: CMakeLists.txt  time_point.hpp  time_unit.hpp
include/xlib/concepts/: CMakeLists.txt  backport.hpp  boolean_testable.hpp  common_reference_with.hpp  concept.hpp  constructible_from.hpp  convertible_to.hpp  copy_constructible.hpp  derived_from.hpp  destructible.hpp  equality_comparable.hpp  invocable.hpp  move_constructible.hpp  moveable_value.hpp  same_as.hpp
include/xlib/concepts/support/: concept.hpp  normal.hpp  sfinae.hpp
include/xlib/container/: CMakeLists.txt  concurrent_queue.hpp
include/xlib/container/conqueue/: CMakeLists.txt  queue_op_status.hpp  unbounded_queue.hpp
include/xlib/container/map/: skip_list.hpp
include/xlib/container/span/: CMakeLists.txt  byte_span.hpp  span.hpp
include/xlib/error/: error_code.hpp
include/xlib/execution/: CMakeLists.txt  async.hpp  oneway.hpp
include/xlib/execution/algorithm/: cooperate.hpp  just.hpp  on.hpp  sync_wait.hpp  transform.hpp
include/xlib/execution/concept/: CMakeLists.txt  executor.hpp  has_connect.hpp  has_execute.hpp  has_schedule.hpp  has_sender_types.hpp  has_start.hpp  has_submit.hpp  operation_state.hpp  receiver.hpp  scheduler.hpp  sender.hpp  sender_to.hpp  typed_sender.hpp
include/xlib/execution/context/: task_queue.hpp
include/xlib/execution/executor/: execute.hpp  inline_executor.hpp
include/xlib/execution/operation_state/: start.hpp
include/xlib/execution/property/: behavioral_property.hpp  blocking.hpp  blocking_adaptation.hpp  bulk_guarantee.hpp  context.hpp  mapping.hpp  outstanding_work.hpp  property.hpp  relationship.hpp
include/xlib/execution/receiver/: set_done.hpp  set_error.hpp  set_value.hpp
include/xlib/execution/scheduler/: schedule.hpp
include/xlib/execution/sender/: connect.hpp  sender_base.hpp  submit.hpp  submit_state.hpp
include/xlib/execution/support/: as_invocable.hpp  as_receiver.hpp  bad_executor.hpp  invocable_archetype.hpp
include/xlib/execution/thread_pool/: CMakeLists.txt  static_thread_pool.hpp
include/xlib/execution/type_traits/: connect_traits.hpp  executor_index.hpp  executor_shape.hpp  is_operation_state.hpp  is_sender.hpp  sender_traits.hpp  sender_value.hpp
include/xlib/executor/: CMakeLists.txt  executor.hpp
include/xlib/executor/detail/: CMakeLists.txt  abstract_executor_service.ipp  scheduled_thread_pool_executor.ipp  thread_pool_executor.ipp
include/xlib/filesystem/: CMakeLists.txt  ensure.hpp  filesystem.hpp
include/xlib/io/: CMakeLists.txt  buffer.hpp  byte_buffer.hpp
include/xlib/io/buffer/: CMakeLists.txt  buffer_manager.hpp  byte_buffer.hpp
include/xlib/io/bytes/: CMakeLists.txt  bytes_access.hpp
include/xlib/io/mmap/: CMakeLists.txt  mmap.hpp
include/xlib/io/stream/: input_output_span_stream.hpp  input_span_stream.hpp  output_span_stream.hpp
include/xlib/io/support/: io_errc.hpp  io_error.hpp  offset.hpp  position.hpp  position_helper.hpp  stream_helper.hpp  type.hpp
include/xlib/memory/: CMakeLists.txt  auto_release.hpp  noncopyable.hpp  owner.hpp  refcount.hpp  shared.hpp  unique_ptr.hpp
include/xlib/meta/: CMakeLists.txt  type_list.hpp  type_set.hpp
include/xlib/numeric/: CMakeLists.txt
include/xlib/numeric/bit/: CMakeLists.txt  bit_cast.hpp  byteswap.hpp  endian.hpp  endian_traits.hpp  transform_endian.hpp
include/xlib/preprocessor/: utility.hpp
include/xlib/preprocessor/facilities/: at.hpp  cat.hpp  check.hpp  empty.hpp  eval.hpp  expand.hpp  ignore.hpp  probe.hpp
include/xlib/preprocessor/logical/: bool.hpp
include/xlib/property/: CMakeLists.txt  adapter.hpp  can_query.hpp  enumeration.hpp  enumerator_adapter.hpp  is_applicable_property.hpp  prefer.hpp  prefer_only.hpp  query.hpp  require.hpp
include/xlib/property/concept/: CMakeLists.txt  has_query.hpp
include/xlib/property/type_traits/: prefer_free_traits.hpp  query_free_traits.hpp  query_static_member_traits.hpp  query_static_traits.hpp  require_concept_member_traits.hpp  require_free_traits.hpp  require_member_traits.hpp  require_static_traits.hpp
include/xlib/ranges/: CMakeLists.txt  ranges.hpp
include/xlib/string/: CMakeLists.txt  xstring.hpp
include/xlib/string/detail/: xstring_refcount.hpp
include/xlib/strings/: CMakeLists.txt  xstring.hpp
include/xlib/strings/detail/: xstring_refcount.hpp
include/xlib/sync/: CMakeLists.txt  latch.hpp
include/xlib/system/: CMakeLists.txt  byte_order.hpp  thread.hpp  thread_group.hpp
include/xlib/thread/: CMakeLists.txt
include/xlib/thread/future/: CMakeLists.txt  future.hpp  shared_packaged_task.hpp
include/xlib/thread/latch/: CMakeLists.txt  latch.hpp
include/xlib/thread/shared_mutex/: CMakeLists.txt  shared_lock.hpp  shared_mutex.hpp
include/xlib/thread/thread/: CMakeLists.txt  thread.hpp  thread_group.hpp
include/xlib/thread/timer/: timer.hpp
include/xlib/types/: CMakeLists.txt  byte.hpp
include/xlib/types/type_traits/: CMakeLists.txt  add_reference.hpp  always_false.hpp  apply_result.hpp  common_reference.hpp  conditional.hpp  decay.hpp  enable_if.hpp  integral_constant.hpp  invoke_result.hpp  is_base_of.hpp  is_constructible.hpp  is_convertible.hpp  is_copy_constructible.hpp  is_destructible.hpp  is_detected.hpp  is_function.hpp  is_integral.hpp  (+24 more)
include/xlib/utility/: CMakeLists.txt  integer_sequence.hpp
test/: CMakeLists.txt
test/numeric/bit/: test_byteswap.cpp
test/preprocessor/: test_preprocessor.cpp
test/utility/format/: test_format.cpp
(+23 files in other folders)
